--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -43,6 +43,11 @@
                         <span class="value" id="count-total">0</span>
                     </div>
                 </div>
+                <div class="download-bar">
+                    <button id="download-btn" class="btn-download" onclick="downloadVideo()" disabled>
+                        Download counting video (MP4)
+                    </button>
+                </div>
             </div>
         </section>
 
